--- a/SanPhamCK2/BloglListing.html
+++ b/SanPhamCK2/BloglListing.html
@@ -55,23 +55,95 @@
         </div>
     </header>
     <body>
-        <div class="bloglist">
+        <div class="home-path">
             <a href="https://edupress.thimpress.com/">Home</a>
-            <i class="fa-solid fa-chevron-right"></i>
+            <i class="fa-solid fa-chevron-right" style="font-size:10px"></i>
             <span>Blog</span>
         </div>
-        <div class="Bloglist1">
-            <div class="artikel1">
-                <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
-                <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
-                <ul>
-                    <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
-                    <li><span>January 30, 2024</span></li>
-                </ul>
-                <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+        <div class="bloglist">
+            <div class="bloglist1-1" >
+                <p>Blog</p>
+                <span>showing 1=6 of 7 results</span>
+                <div class="Toggle-button">
+                    <i class="fa-solid fa-list" onclick="toggleView(event);"></i>
+                    <i class="fa-solid fa-table-cells-large" onclick="toggleView(event);"></i>
+                </div>
             </div>
+            <div class="bloglist1-2">
+                <div id = "container" class="project-container ">
+                    <div class="artikel1 item">
+                        <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
+                        <div class="item-content">
+                            <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
+                            <ul>
+                                <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
+                                <li><span>January 30, 2024</span></li>
+                            </ul>
+                            <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+                        </div>
+                    </div>
+                    <div class="artikel1 item">
+                        <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
+                        <div class="item-content">
+                            <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
+                            <ul>
+                                <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
+                                <li><span>January 30, 2024</span></li>
+                            </ul>
+                            <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+                        </div>
+                    </div>
+                    <div class="artikel1 item">
+                        <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
+                        <div class="item-content">
+                            <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
+                            <ul>
+                                <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
+                                <li><span>January 30, 2024</span></li>
+                            </ul>
+                            <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+                        </div>
+                    </div>
+                    <div class="artikel1 item">
+                        <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
+                        <div class="item-content">
+                            <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
+                            <ul>
+                                <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
+                                <li><span>January 30, 2024</span></li>
+                            </ul>
+                            <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+                        </div>
+                    </div>
+                    <div class="artikel1 item">
+                        <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
+                        <div class="item-content">
+                            <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
+                            <ul>
+                                <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
+                                <li><span>January 30, 2024</span></li>
+                            </ul>
+                            <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+                        </div>
+                    </div>
+                    <div class="artikel1 item">
+                        <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
+                        <div class="item-content">
+                            <a href="" class="artikelTitle">Best LearnPress WordPress Theme Collection for 2023</a>
+                            <ul>
+                                <li><svg xmlns="http://www.w3.org/2000/svg" width="20" height="21" viewBox="0 0 20 21" fill="none"><g clip-path="url(#clip0_233_3200)"><path d="M16.6667 3.29997H15.8334V1.6333H14.1667V3.29997H5.83335V1.6333H4.16669V3.29997H3.33335C2.41669 3.29997 1.66669 4.04997 1.66669 4.96663V18.3C1.66669 19.2166 2.41669 19.9666 3.33335 19.9666H16.6667C17.5834 19.9666 18.3334 19.2166 18.3334 18.3V4.96663C18.3334 4.04997 17.5834 3.29997 16.6667 3.29997ZM16.6667 18.3H3.33335V7.46663H16.6667V18.3Z" fill="#FF782D"></path></g><defs><clipPath id="clip0_233_3200"><rect width="20" height="20" fill="white" transform="translate(0 0.799805)"></rect></clipPath></defs></svg></li>
+                                <li><span>January 30, 2024</span></li>
+                            </ul>
+                            <div class="artikelText">Looking for an amazing & well-functional LearnPress WordPress Theme? Online education has become so popular that there are a lot... </div>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+
+            
         </div>
         
     </body>
+    <script src="script.js"></script>
 </body>
 </html>
