--- a/SanPhamCK2/BloglListing.html
+++ b/SanPhamCK2/BloglListing.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="bloglist1-2">
-                <div id = "container" class="project-container ">
+                <div id = "container" class="project-container grid-layout">
                     <div class="artikel1 item">
                         <img src="./best-learnpress-wordpress-theme-collection-800x488.png" alt="">
                         <div class="item-content">
