--- a/SanPhamCK2/BlogListing.html
+++ b/SanPhamCK2/BlogListing.html
@@ -268,7 +268,7 @@
     <footer class="copyRight">
         <p>Copyright © 2024 LearnPress LMS | Powered by <a href="https://thimpress.com/learnpress/?utm_source=EduPress&amp;utm_medium=HomePage&amp;utm_campaign=Footer" target="_blank" rel="noopener">LearnPress LMS</a></p>
     </footer>
-    <button onclick="scrollToTop()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+    <button onclick="scrollToTop()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up" style="color: white;"></i></button>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
     <script>
