--- a/SanPhamCK2/FAQS.html
+++ b/SanPhamCK2/FAQS.html
@@ -15,56 +15,67 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    .QuestionBoxes {
-    display: flex;
-    flex-wrap: wrap; /* Allows items to wrap onto multiple lines */
-    gap: 1rem; /* Gap between items */
-    justify-content: center; /* Center the items */
+.faq-item {
+    margin-bottom: 15px;
+    
 }
 
-.QuestionBoxes .faq-item {
+.faq-question {
+  width: 40rem;
+  border: none;
+  padding: 15px;
+  text-align: left;
+  font-size: 18px;
+  cursor: pointer;
+  position: relative;
+  border-radius: 10px ;
+  background-color: #F5F5F5;
+  transition: transform 0.1s linear ;
+
+}
+.faq-question.active{
+    border-radius: 10px 10px 0 0;
+    color: #cb7445;
+}
+.arrow {
+  float: right;
+  transition: transform 0.3s ease;
+}
+
+.faq-answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  background-color: #F5F5F5;
+  padding: 0 15px;
+  border-radius: 0 0 10px 10px;
+}
+
+.faq-answer p {
+  margin: 15px 0;
+}
+.faq-question .arrow{
+ transform: rotate(270deg);
+
+}
+.faq-question.active .arrow {
+  transform: rotate(360deg);
+}
+
+.faq-answer.expanded {
+  max-height: 200px; /* Adjust based on the content */
+}
+.QuestionBoxes{
+    display: grid;
+    grid-template-columns: min-content min-content;
+    justify-content: center;
+    column-gap: 7rem;
+    padding: 3rem 0;
+}
+.column1 + .column2{
     display: flex;
     flex-direction: column;
-    width: calc(50% - 3.5rem); /* Two items per row with gap */
-    box-sizing: border-box; /* Includes padding and border in the element's total width and height */
 }
-
-.QuestionBoxes .faq-question {
-    background-color: #f1f1f1;
-    border: none;
-    padding: 15px;
-    text-align: left;
-    font-size: 18px;
-    cursor: pointer;
-    position: relative;
-}
-
-.QuestionBoxes .arrow {
-    float: right;
-    transition: transform 0.3s ease;
-}
-
-.QuestionBoxes .faq-answer {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease;
-    background-color: #f9f9f9;
-    padding: 0 15px;
-}
-
-.QuestionBoxes .faq-answer p {
-    margin: 15px 0;
-}
-
-.QuestionBoxes .faq-question.active .arrow {
-    transform: rotate(180deg);
-}
-
-.QuestionBoxes .faq-answer.expanded {
-    max-height: 200px; /* Adjust based on the content */
-}
-
-
 </style>
 <body>
     <header>
@@ -111,76 +122,80 @@
         </div>
         <span class="h1">FAQS</span>
         <div class="QuestionBoxes">
-            <div class="faq-item">
-                <button class="faq-question">
-                  What is your return policy?
-                  <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                  <p>We offer a 30-day return policy for all items. Please ensure the items are in their original condition.</p>
-                </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    How do I track my order?
+           <div class="column1">
+                <div class="faq-item">
+                    <button class="faq-question">
+                    What is your return policy?
                     <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>You can track your order using the tracking number provided in your confirmation email.</p>
+                    </button>
+                    <div class="faq-answer">
+                    <p>We offer a 30-day return policy for all items. Please ensure the items are in their original condition.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    What Royalty mean ?
-                    <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                <div class="faq-item">
+                    <button class="faq-question">
+                        How do I track my order?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>You can track your order using the tracking number provided in your confirmation email.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    What Royalty mean ?
-                    <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                <div class="faq-item">
+                    <button class="faq-question">
+                        What Royalty mean ?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    What Royalty mean ?
-                    <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                <div class="faq-item">
+                    <button class="faq-question">
+                        What Royalty mean ?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    What Royalty mean ?
-                    <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+           </div>
+            <div class="column2">
+                <div class="faq-item">
+                    <button class="faq-question">
+                        What Royalty mean ?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    What Royalty mean ?
-                    <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                <div class="faq-item">
+                    <button class="faq-question">
+                        What Royalty mean ?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="faq-item">
-                <button class="faq-question">
-                    What Royalty mean ?
-                    <span class="arrow">▼</span>
-                </button>
-                <div class="faq-answer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                <div class="faq-item">
+                    <button class="faq-question">
+                        What Royalty mean ?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question">
+                        What Royalty mean ?
+                        <span class="arrow">▼</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fringilla mauris vel tempus interdum. Sed eu accumsan mauris. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vehicula, nunc quis maximus elementum, diam eros iaculis lectus, ut blandit ipsum eros eu est. Etiam fermentum purus lectus.</p>
+                    </div>
                 </div>
             </div>
         </div>
